--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -30,6 +30,16 @@ thiserror.workspace = true
 wasmer = { workspace = true, optional = true }
 wasmtime = { workspace = true, optional = true }
 
+[target.wasm32-unknown-unknown.dependencies.wasmer]
+workspace = true
+optional = true
+features = ["js-default"]
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmer]
+workspace = true
+optional = true
+features = ["sys-default", "singlepass"]
+
 [dev-dependencies]
 assert_matches.workspace = true
 insta.workspace = true
