--- a/linera-indexer/lib/Cargo.toml
+++ b/linera-indexer/lib/Cargo.toml
@@ -22,7 +22,7 @@ scylladb = ["linera-views/scylladb", "linera-core/scylladb"]
 async-graphql.workspace = true
 async-graphql-axum.workspace = true
 async-trait.workspace = true
-async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
+async-tungstenite.workspace = true
 axum = { workspace = true, features = ["ws"] }
 bcs.workspace = true
 clap.workspace = true
