--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -40,6 +40,7 @@ async-graphql.workspace = true
 async-graphql-axum.workspace = true
 async-lock.workspace = true
 async-trait.workspace = true
+async-tungstenite.workspace = true
 axum = { workspace = true, features = ["ws"] }
 bcs.workspace = true
 cargo_toml.workspace = true
