Pin a tag and commit

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -60,4 +60,4 @@ debug = true
 
 [patch.crates-io.wasmer]
 git = "https://github.com/Twey/wasmer"
-branch = "non-send-environments"
+tag = "4.3.1-linera"
