--- a/Cargo.toml
+++ b/Cargo.toml
@@ -219,6 +219,7 @@ version = "0.4.1"
 git = "https://github.com/Twey/rust-indexed-db"
 branch = "no-uuid-wasm-bindgen"
 
+
 [patch.crates-io.wasmer]
 git = "https://github.com/Twey/wasmer"
-branch = "non-send-environments"
+tag = "4.3.1-linera"
