--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -90,6 +90,5 @@ cfg_aliases.workspace = true
 ignored = ["serde_bytes"]
 
 [patch.crates-io.wasmer]
-version = "4.3.0-alpha.1"
 git = "https://github.com/Twey/wasmer"
-branch = "non-send-environments"
+tag = "4.3.1-linera"
