enable k8s CI more often

--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -12,9 +12,8 @@ on:
       - 'configuration/**'
       - 'docker/**'
       - 'kubernetes/**'
-      - 'linera-service/src/grpc_proxy.rs'
-      - 'linera-service/src/server.rs'
-      - 'linera-rpc/src/grpc/server.rs'
+      - 'linera-service/**'
+      - 'linera-rpc/**'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
