--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,7 @@ on:
       - "**"
     paths:
       - 'docker/Dockerfile'
+      - 'docker/compose.sh'
       - 'Cargo.toml'
       - '.github/workflows/docker.yml'
   workflow_dispatch:
